# AQI-Autonomous-Quantum-Intelligence

./: .env.example  .gitignore  ACTIVATION_CERTIFICATION.md  AGENT_ALAN_INVESTOR_REPORT.md  AGENT_X_MASTER_SYSTEM_REFERENCE.md  ALAN_ABILITIES_AND_KNOWLEDGE_REPORT.md  ALAN_COMPLETE_SYSTEM_DELIVERY.md  ALAN_COMPLIANCE_INTEGRATION.md  ALAN_COMPLIANCE_MATRIX.md  ALAN_CONSTITUTION_ARTICLE_C.md  ALAN_CONSTITUTION_ARTICLE_E.md  ALAN_CONSTITUTION_ARTICLE_I.md  ALAN_CONSTITUTION_ARTICLE_L.md  ALAN_CONSTITUTION_ARTICLE_O.md  ALAN_CONSTITUTION_ARTICLE_S.md  ALAN_CONSTITUTION_ARTICLE_S7.md  ALAN_EMAIL_NODE_CONFIG.json  ALAN_EVOLUTION_PATH.md  ALAN_EVOLUTION_PATH_REPORT.md  ALAN_FIELD_PACK_V1.md  ALAN_HIGH_AVAILABILITY_PLAYBOOK.md  ALAN_JONES_PERMANENT_RECORD.md  ALAN_MONITORING_RECORD.md  ALAN_MUSCLE_MEMORY_REFERENCE.md  ALAN_VOICE_CONTRACT.md  ALTERNATIVE_CALLING_README.md  AQI_ADVANCED_CAPABILITIES_ANALYSIS.md  AQI_AGENT_CONSOLIDATED_MASTER.md  AQI_AGENT_LEASING_PROPOSAL.md  AQI_AI_FEAR_ANALYSIS.md  AQI_AUTONOMY_CORRECTION.md  AQI_Business_Persona.md  AQI_CLASSIFIED_SYNOPSIS.md  AQI_COMMUNITY_THREAT_ANALYSIS.md  AQI_COMPETITIVE_VICTORY_ANALYSIS.md  AQI_CORPORATE_BUSINESS_PLAN_2025.md  AQI_CORPORATE_README_IMPROVED.md  AQI_CORPORATE_VALUATION_MATRIX.md  AQI_COUNCIL_MANIFESTO.md  AQI_CREATIVITY_ANALYSIS.md  (+507 more)
CONSTITUTIONAL_CORE/: alan_state_machine.py  organism_self_awareness_canon.py  telephony_perception_canon.py  training_knowledge_distilled.json  training_transcripts.txt  training_transcripts_v2.txt
alan_system/: README.md  alan_aqi_autonomous.py  alan_config.py  alan_dns_monitor.py  alan_main.py  alan_main_sounddevice.py  alan_memory.py  alan_voice.py  alan_voice_sounddevice.py  aqi_natural_alignment.py  test_aqi_system.py  test_enhancements.py
aqi-talk/: README.md  pyproject.toml
aqi_crossrefs/: aqi_concepts.json
aqi_delta/: pyproject.toml
aqi_delta/aqi_delta/: delta_engine.py  delta_packet.py  delta_storage.py
aqi_governance/: README.md  integration_test.py  pyproject.toml  test_governance.py
aqi_governance/aqi_governance/: authority_manager.py  decision_packet.py  governance_engine.py  governance_rules.py
aqi_governance_intelligence/: README.md  api.py  divergence.py  escalation.py  integrity.py  introspection.py  pyproject.toml
aqi_graph/: aqi_graph_nodes.json
aqi_media/: produce_documentary.py  run_intro_video.py  test_blueprint.py  test_tts.py
aqi_meta/: ALAN_AGENT_PORTAL_FAMILIARIZATION_COMPLETE.md  ALAN_PAYMENTSHUB_INTEGRATION_COMPLETE.md  ALAN_READINESS_ASSESSMENT.md  AQI_Agent_Portal_Integration_README.md  AQI_COMPREHENSIVE_THESIS.md  AQI_DOCTRINE_OF_ORIGIN_BASED_INTELLIGENCE.md  AQI_First_Laws.md  AQI_Foundational_Decree.md  AQI_MERCHANT_SERVICES_README.md  AQI_NATURAL_ORDER.md  AQI_NORTH_INTEGRATION_README.md  AQI_PUBLIC_THESIS_ORIGIN_BASED_INTELLIGENCE.md  AQI_Relational_Backprop_Integration.md  AQI_Sandbox_Guardian.md  AQI_THESIS_ORIGIN_BASED_INTELLIGENCE.md  Agent_Portal_Integration_Prep.md  NORTH_INTEGRATION_TEST_REPORT.md  agent_portal_access_enabler.py  agent_portal_access_report.json  agent_portal_config.py  agent_portal_demo.py  agent_portal_integration.py  agent_portal_mock_demo.py  agents.py  alan_agent_portal_explorer.py  alan_agent_portal_report.json  alan_production_deployment.py  aqi_live_demo.py  aqi_merchant_services.py  aqi_mock_demo.py  aqi_north_integration.py  aqi_production_deployment.py  aqi_relational_backprop.py  authority.py  business_engine.py  check_alan_readiness.py  cyber_defense_core.py  dashboard.py  data_ingestion.py  doctrine_demonstration.py  (+14 more)
aqi_storage/: README.md  pyproject.toml
aqi_storage/aqi_storage/: persistence.py  replay_engine.py
aqi_summaries/: aqi_concept_summaries.json  aqi_summaries.json
aqi_video_pipeline/: main.py
concepts/: qpc_prototype.py  qpc_runner.py
dashboard/: app.py
docs/: AGENT_AUTONOMY.md  AUTONOMY.md  AVATAR_GUI.md  DESIGN_NOTES.md  MULTI_CYCLE_TREND_DASHBOARD.md  MULTI_INSTANCE_ROUTING_MAP.md  PHASE_5_CYCLE_SUMMARY_TEMPLATE.md  PHASE_5_DASHBOARD_SCHEMA.md  PHASE_5_OPS_PLAYBOOK.md  PHASE_5_TO_PHASE_6_PROMOTION_CHECKLIST.md  PHASE_6_DISTRIBUTED_COGNITION_PLAYBOOK.md  PHASE_6_REGRESSION_SUITE.md  alan_conversational_adapter.md  ethical-framework.md  (+4 more)
(+137 files in other folders)
