[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqi-governance"
version = "0.1.0"
description = "AQI Governance Engine - Authority and constraint enforcement"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "talk>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/aqi-governance"
Repository = "https://github.com/your-org/aqi-governance"
Issues = "https://github.com/your-org/aqi-governance/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aqi_governance*"]

[tool.setuptools.package-data]
aqi_governance = ["py.typed"]