[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqi-storage"
version = "0.1.0"
description = "AQI Storage - Persistence and replay system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/your-org/aqi-storage"
Repository = "https://github.com/your-org/aqi-storage"
Issues = "https://github.com/your-org/aqi-storage/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aqi_storage*"]

[tool.setuptools.package-data]
aqi_storage = ["py.typed"]